# Impact-of-Sentiment-analysis-on-Energy-Sector-Stock-Prices

./: .gitignore  lab.ipynb  main.py  pyproject.toml
app/: home.py
app/pages/: A_Stocks analysis.py  B_Exploratory_analysis_on_tweets.py  C_Sentimenal_analysis.py  D_Investment_recommendation.py
data/: stocks_daily_data.pkl
data/new_webscrapping/: webscraped_@Weyerhaeuser.csv  webscraped_@bhp.csv  webscraped_altagas.csv  webscraped_altagas_ltd.csv  webscraped_bhp_group.csv  webscraped_fmc_corp.csv  webscraped_international_paper_co.csv  webscraped_stora_enso.csv  webscraped_totalenergies_se.csv  webscraped_weyerhaeuser.csv  webscraped_weyerhaeuser_co.csv
data/new_webscrapping_clean/: webscraped_altagas_ltd.pkl  webscraped_bhp_group.pkl  webscraped_fmc_corp.pkl  webscraped_international_paper_co.pkl  webscraped_stora_enso.pkl  webscraped_totalenergies_se.pkl  webscraped_weyerhaeuser_co.pkl
data/new_webscrapping_predicted/: webscraped_stora_enso.csv  webscraped_totalenergies_se.csv
data/temp/: concatenating.ipynb
model/: daily_model_results.xlsx  model.py  monthlymodel_accuracy.xlsx  parameters.py  score_investment.py  score_investment_daily.py  score_investment_monthly.py
model/model_evaluation/: daily_model_results.xlsx
preprocessing/: preprocessing.py  preprocessing_python.py
src/: lab.ipynb  main.py
src/model/: monthly_signal_market_correlation.xlsx  parameters.py  score_investment_daily.py  score_investment_monthly.py  (+1 more)
webscrapping/: lab.ipynb  reddit_comments_S%26P+500+energy.csv  searchreddit_altagas.csv  test.ipynb  x.py  x_scrapper.py
(+32 files in other folders)
