[project]
name = "impact-of-sentiment-analysis-on-energy-sector-stock-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1,<2",
    "pandas>=1,<2",
    "tensorflow>=2.13.0,<2.14",
    "torch>=2.0.0,<3",
    "transformers>=4,<5",
]

[dependency-groups]
dev = [
    "mypy>=1.0.0,<1.17.0",
    "ruff>=0.12.3",
]
local = [
    "ipykernel>=6.29.5",
]
src = [
    "matplotlib>=3",
    "scipy>=1",
    "statsmodels>=0.14.5",
]
