[project]
name = "impact-of-sentiment-analysis-on-energy-sector-stock-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1,<2",
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "tensorflow>=2.15.0",
    "torch>=2.0.0,<3",
    "transformers>=4,<5",
    "typing_extensions>=4.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.0.0,<1.17.0",
    "ruff>=0.12.3",
]
local = [
    "ipykernel>=6.29.5",
]
src = [
    "matplotlib>=3",
    "scipy>=1",
    "statsmodels>=0.14.5",
]
